@startuml class_diagram
!theme plain
!pragma layout smetana
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam defaultFontSize 11

title Azure OpenAI Local Development AI - Class Diagram

interface IAiInsightsService {
  +PredictMaintenanceAsync(equipmentId, ct)
  +DetectAnomaliesAsync(equipmentId, ct)
}

interface IAiSearchService {
  +SearchPartsAsync(query, ct)
}

class AiProviderSelector
class DevAiInsightsService
class RuleBasedPredictionEngine
class NarrativeFormatter
class DevNaturalLanguageSearchService
class TokenVectorizer
class SynonymCatalog
class OllamaAiInsightsService

class MaintenancePrediction {
  +ConfidenceScore: decimal
  +PredictedIssue: string
}

class AiSearchResult {
  +PartNumber: string
  +Score: decimal
}

IAiInsightsService <|.. DevAiInsightsService
IAiInsightsService <|.. OllamaAiInsightsService
IAiSearchService <|.. DevNaturalLanguageSearchService
AiProviderSelector --> IAiInsightsService
AiProviderSelector --> IAiSearchService
DevAiInsightsService --> RuleBasedPredictionEngine
DevAiInsightsService --> NarrativeFormatter
DevNaturalLanguageSearchService --> TokenVectorizer
DevNaturalLanguageSearchService --> SynonymCatalog
DevAiInsightsService --> MaintenancePrediction
DevNaturalLanguageSearchService --> AiSearchResult

@enduml
